JAR ajoutée